Fix page scroll on mobile nav open

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -4,18 +4,18 @@ $blue: #43859b;
 $salmon: #ee968a;
 
 // fonts
-$montserrat: 'Montserrat', sans-serif;
+$montserrat: "Montserrat", sans-serif;
 
 // Other
 $light-teal: #9ed8cf;
 
-@import '../components/header/UtilityNav.scss';
-@import '../components/header/Header.scss';
-@import '../components/header/Indication.scss';
-@import '../components/header/MainNav.scss';
-@import '../components/isi/Isi.scss';
-@import '../components/footer/Footer.scss';
-@import '../components/Layout.scss';
+@import "../components/header/UtilityNav.scss";
+@import "../components/header/Header.scss";
+@import "../components/header/Indication.scss";
+@import "../components/header/MainNav.scss";
+@import "../components/isi/Isi.scss";
+@import "../components/footer/Footer.scss";
+@import "../components/Layout.scss";
 
 html {
   // UI/UX use multiples of 8px
@@ -28,8 +28,11 @@ html {
 
 body {
   font-family: $montserrat;
-  font-size: 2rem; 
+  font-size: 2rem;
   &.scroll-none {
+    overflow: hidden;
+  }
+  &.isi-expanded {
     overflow: hidden;
   }
 }
@@ -42,8 +45,8 @@ a {
 
 h5 {
   color: $blue;
-  font-size: 16px;	
-  font-weight: 600;	
+  font-size: 16px;
+  font-weight: 600;
   line-height: 19px;
   text-transform: uppercase;
 }
